--- a/index.html
+++ b/index.html
@@ -2,9 +2,43 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="style.css">
     <title></title>
   </head>
   <body>
-    <h1>hi, my name is daisy.</h1>
+    <h2>daisy's weeklies</h2>
+    <h3>weekly 1</h3>
+    <h5>Vaster Than Empires and More Slow by Ursula le Guin</h5>
+    <h4>
+        The Ursula Le Guin reading was an interesting science fiction allegory<br/>
+        for issues that we see in real life. I know in class we talked about<br/>
+        the ways that the new planet represents our planet Earth after the<br/>
+        introduction and growth of the Internet - the way it is an undercurrent<br/>
+        to our reality or our natural lives. However, I recognized the new<br/>
+        planet as an allegory for the rural areas that have the Internet and<br/>
+        Western technologies introduced. The way the planet reacted poorly, or<br/>
+        the inhabitants felt afraid of the colonists. Also, Osden represented a<br/>
+        translator figure between the colonists and the inhabitants. It is<br/>
+        interesting that he was the first of the characters to fully understand<br/>
+        the thoughts of the inhabitants, more interesting that the colonists<br/>
+        adopted the inhabitants’ fear and that they acted in an empathetic<br/>
+        fashion. This event is most likely the reason why the colonists left,<br/>
+        and how this version of colonialism does not look like ours.<br/>
+        This way of analyzing the short story, or the events in the short story<br/>
+        also relates to our version of technological colonialism. I will never<br/>
+        forget when I was informed that even tribal lands in Africa had access<br/>
+        to 3G cell service at a Model United Nations conference in Vancouver,<br/>
+        BC. Access to technology in rural areas of the world, or places that<br/>
+        would be deemed “off the grid” creates opportunity but also indicates<br/>
+        how prominent and inconsiderate Western tradition is abroad.
+    </h4>
+    <h3>
+      <p>weekly 2</p>
+    </h3>
+
+    <h4>
+      <img src = "weekly2.jpg" alt = "Ayn Rand Video" width = "720 px" height = "480 px">
+    </h4>
+
   </body>
 </html>
