reordered the weekly section

--- a/weeklies/index.html
+++ b/weeklies/index.html
@@ -6,10 +6,10 @@
     <title></title>
   </head>
   <body>
-    <h2>daisy's weeklies</h2>
-    <h3>weekly 1</h3>
-    <h5>Vaster Than Empires and More Slow by Ursula le Guin</h5>
-    <h4>
+    <div class= title-style>daisy's weeklies</div>
+    <h1>weekly 1</h1>
+    <h2> <div class= book-title> Vaster Than Empires and More Slow </div> by Ursula le Guin</h2>
+    <p>
         The Ursula Le Guin reading was an interesting science fiction allegory<br/>
         for issues that we see in real life. I know in class we talked about<br/>
         the ways that the new planet represents our planet Earth after the<br/>
@@ -31,14 +31,16 @@
         BC. Access to technology in rural areas of the world, or places that<br/>
         would be deemed “off the grid” creates opportunity but also indicates<br/>
         how prominent and inconsiderate Western tradition is abroad.
-    </h4>
-    <h3>
-      <p>weekly 2</p>
-    </h3>
+    </p>
+    <h1>weekly 2</h1>
+    <h2> <a href = "https://vimeo.com/groups/96331/videos/80799353">"All Watched Over by Machines of Loving Grace" video</a> </h2>
+    <p>
+      <img src = "weekly2.jpg" alt = "Ayn Rand Video Response" width = "720 px" height = "480 px">
+    </p>
 
-    <h4>
-      <img src = "weekly2.jpg" alt = "Ayn Rand Video" width = "720 px" height = "480 px">
-    </h4>
+    <h1>weekly 3<h1/>
+
+    <h3>daisy's weeklies</h3>
 
   </body>
 </html>
