--- a/weeklies/index.html
+++ b/weeklies/index.html
@@ -39,6 +39,19 @@
     </p>
 
     <h1>weekly 3<h1/>
+      <h2>"In Defense of the Poor Image" by Hito Steyerl</h2>
+      <p> Here are a few images from home and from times with my friends<br/>
+        that relate to the reading. They are posterized, such that I<br/>
+        made them poor quality images. This does not confront the part<br/>
+        of the article that addresses poor image and its relation to video,<br/>
+        but, by posterizing these images, I created my response to the reading.</p>
+      <p>
+        <img src ="friends.jpg" alt= "Three Friends Reunited" width:"400px" height = "300px">
+        <img src ="flowers.jpg" alt= "Flowers in Hermosa Beach" width:"300px" height = "400px">
+        <img src ="ferry.jpg" alt= "Seattle and the Ferry" width:"300px" height = "400px">
+      <p>
+
+    <h1>weekly4</h1>
 
     <h3>daisy's weeklies</h3>
 
