updates to portfolio

--- a/portfolio/aboutMe.html
+++ b/portfolio/aboutMe.html
@@ -38,7 +38,12 @@
     </div>
 
     <div class="contactMeHomepage">
+      <div class= "titleName">
+        <a href="index.html">
+        <p>daisy bell</p>
+        </a>
       </div>
+        </div>
 
   </body>
 </html>
