--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -49,7 +49,24 @@
     </div>
 
     <div class= "sampleWork">
-
+      <a href="photography.html">
+      <img src="photography9.jpg">
+    </a>
+    <a href="illustrations.html">
+      <img src="artboard9.jpg">
+      </a>
+      <a href="photography.html">
+      <img src="photography1.jpg">
+      </a>
+      <a href="illustrations.html">
+      <img src="artboard2.jpg">
+      </a>
+      <a href="paintings.html">
+      <img src="studio8.jpg">
+      </a>
+      <a href="photography.html">
+      <img src="photography3.jpg">
+      </a>
     </div>
 
     <div class="aboutMeHomePage">
@@ -71,6 +88,11 @@
     </div>
 
     <div class="contactMeHomepage">
+      <div class= "titleName">
+        <a href="index.html">
+        <p>daisy bell</p>
+        </a>
+      </div>
         </div>
 
     <script src="https://code.jquery.com/jquery-3.3.1.min.jw"></script>
