--- a/portfolio/paintings.html
+++ b/portfolio/paintings.html
@@ -48,7 +48,12 @@
     </div>
 
     <div class="contactMeHomepage">
+      <div class= "titleName">
+        <a href="index.html">
+        <p>daisy bell</p>
+        </a>
       </div>
+        </div>
 
   </body>
 </html>
