--- a/portfolio/contactMe.html
+++ b/portfolio/contactMe.html
@@ -27,11 +27,13 @@
       </a>
     </div>
 
+    <div class="contactMeHomepage">
     <div class="next">
       <a href="index.html">
         <p>back to the homepage>></p>
         </a>
     </div>
+  </div>
 
   </body>
 </html>
