--- a/portfolio/illustrations.html
+++ b/portfolio/illustrations.html
@@ -12,7 +12,7 @@
       </div>
 
     <div class="content">
-  <div class="contentImagePlacement">
+  <!-- <div class="contentImagePlacement">
     <img src="artboard9.jpg">
     </div>
   <div class="contentImagePlacement">
@@ -38,16 +38,214 @@
     </div>
   <div class="contentImagePlacement">
     <img src="artboard7.jpg">
+    </div> -->
+    <img id="biggerImg" src="artboard9.jpg" alt="photo" style="width:80%; max-width: 300px">
+      <div id="myModal" class="modal">
+      <span class="close">&times;</span>
+      <img class="modal-content" id="img101">
+      <div id="caption"></div>
+      </div>
+      <script>
+      var modal = document.getElementById("myModal");
+      var img = document.getElementById("biggerImg");
+      var modalImg = document.getElementById("img101");
+      var captionText = document.getElementById("photo");
+      img.onclick = function(){
+        modal.style.display = "block";
+        modalImg.src = this.src;
+        captionText.innerHTML = this.alt;
+      }
+      var span = document.getElementsByClassName("close")[0];
+      span.onclick = function() {
+        modal.style.display = "none";
+      }
+    </script>
+
+  <img id="biggerImg2" src="artboard3.jpg" alt="photo" style="width:80%; max-width: 300px">
+    <div id="myModal" class="modal">
+    <span class="close">&times;</span>
+    <img class="modal-content" id="img101">
+    <div id="caption"></div>
     </div>
+    <script>
+    var modal = document.getElementById("myModal");
+    var img = document.getElementById("biggerImg2");
+    var modalImg = document.getElementById("img101");
+    var captionText = document.getElementById("photo");
+    img.onclick = function(){
+      modal.style.display = "block";
+      modalImg.src = this.src;
+      captionText.innerHTML = this.alt;
+    }
+    var span = document.getElementsByClassName("close")[0];
+    span.onclick = function() {
+      modal.style.display = "none";
+    }
+  </script>
+
+    <img id="biggerImg3" src="artboard8.jpg" alt="photo" style="width:80%; max-width: 300px">
+    <div id="myModal" class="modal">
+    <span class="close">&times;</span>
+    <img class="modal-content" id="img101">
+    <div id="caption"></div>
+    </div>
+    <script>
+    var modal = document.getElementById("myModal");
+    var img = document.getElementById("biggerImg3");
+    var modalImg = document.getElementById("img101");
+    var captionText = document.getElementById("photo");
+    img.onclick = function(){
+      modal.style.display = "block";
+      modalImg.src = this.src;
+      captionText.innerHTML = this.alt;
+    }
+    var span = document.getElementsByClassName("close")[0];
+    span.onclick = function() {
+      modal.style.display = "none";
+    }
+  </script>
+
+    <img id="biggerImg4" src="artboard1.png" alt="photo" style="width:80%; max-width: 300px">
+    <div id="myModal" class="modal">
+    <span class="close">&times;</span>
+    <img class="modal-content" id="img101">
+    <div id="caption"></div>
+    </div>
+    <script>
+    var modal = document.getElementById("myModal");
+    var img = document.getElementById("biggerImg4");
+    var modalImg = document.getElementById("img101");
+    var captionText = document.getElementById("photo");
+    img.onclick = function(){
+      modal.style.display = "block";
+      modalImg.src = this.src;
+      captionText.innerHTML = this.alt;
+    }
+    var span = document.getElementsByClassName("close")[0];
+    span.onclick = function() {
+      modal.style.display = "none";
+    }
+  </script>
+
+    <img id="biggerImg5" src="artboard2.jpg" alt="photo" style="width:80%; max-width: 300px">
+    <div id="myModal" class="modal">
+    <span class="close">&times;</span>
+    <img class="modal-content" id="img101">
+    <div id="caption"></div>
+    </div>
+    <script>
+    var modal = document.getElementById("myModal");
+    var img = document.getElementById("biggerImg5");
+    var modalImg = document.getElementById("img101");
+    var captionText = document.getElementById("photo");
+    img.onclick = function(){
+      modal.style.display = "block";
+      modalImg.src = this.src;
+      captionText.innerHTML = this.alt;
+    }
+    var span = document.getElementsByClassName("close")[0];
+    span.onclick = function() {
+      modal.style.display = "none";
+    }
+  </script>
+
+    <img id="biggerImg6" src="artboard4.jpg" alt="photo" style="width:80%; max-width: 300px">
+    <div id="myModal" class="modal">
+    <span class="close">&times;</span>
+    <img class="modal-content" id="img101">
+    <div id="caption"></div>
+    </div>
+    <script>
+    var modal = document.getElementById("myModal");
+    var img = document.getElementById("biggerImg6");
+    var modalImg = document.getElementById("img101");
+    var captionText = document.getElementById("photo");
+    img.onclick = function(){
+      modal.style.display = "block";
+      modalImg.src = this.src;
+      captionText.innerHTML = this.alt;
+    }
+    var span = document.getElementsByClassName("close")[0];
+    span.onclick = function() {
+      modal.style.display = "none";
+    }
+  </script>
+
+    <img id="biggerImg7" src="artboard5.jpg" alt="photo" style="width:80%; max-width: 300px">
+    <div id="myModal" class="modal">
+    <span class="close">&times;</span>
+    <img class="modal-content" id="img101">
+    <div id="caption"></div>
+    </div>
+    <script>
+    var modal = document.getElementById("myModal");
+    var img = document.getElementById("biggerImg7");
+    var modalImg = document.getElementById("img101");
+    var captionText = document.getElementById("photo");
+    img.onclick = function(){
+      modal.style.display = "block";
+      modalImg.src = this.src;
+      captionText.innerHTML = this.alt;
+    }
+    var span = document.getElementsByClassName("close")[0];
+    span.onclick = function() {
+      modal.style.display = "none";
+    }
+  </script>
+
+    <img id="biggerImg8" src="artboard6.jpg" alt="photo" style="width:80%; max-width: 300px">
+    <div id="myModal" class="modal">
+    <span class="close">&times;</span>
+    <img class="modal-content" id="img101">
+    <div id="caption"></div>
+    </div>
+    <script>
+    var modal = document.getElementById("myModal");
+    var img = document.getElementById("biggerImg8");
+    var modalImg = document.getElementById("img101");
+    var captionText = document.getElementById("photo");
+    img.onclick = function(){
+      modal.style.display = "block";
+      modalImg.src = this.src;
+      captionText.innerHTML = this.alt;
+    }
+    var span = document.getElementsByClassName("close")[0];
+    span.onclick = function() {
+      modal.style.display = "none";
+    }
+  </script>
+
+    <img id="biggerImg9" src="artboard7.jpg" alt="photo" style="width:80%; max-width: 300px">
+    <div id="myModal" class="modal">
+    <span class="close">&times;</span>
+    <img class="modal-content" id="img101">
+    <div id="caption"></div>
+    </div>
+    <script>
+    var modal = document.getElementById("myModal");
+    var img = document.getElementById("biggerImg9");
+    var modalImg = document.getElementById("img101");
+    var captionText = document.getElementById("photo");
+    img.onclick = function(){
+      modal.style.display = "block";
+      modalImg.src = this.src;
+      captionText.innerHTML = this.alt;
+    }
+    var span = document.getElementsByClassName("close")[0];
+    span.onclick = function() {
+      modal.style.display = "none";
+    }
+  </script>
+</div>
     </div>
 
-    <div class="next">
-      <a href="videoWork.html">
-        <p>next: video work</p>
-        </a>
-    </div>
 
     <div class="contactMeHomepage">
+      <div class="next">
+        <a href="videoWork.html">
+          <p>next: video work</p>
+          </a>
+      </div>
       <div class= "titleName">
         <a href="index.html">
         <p>daisy bell</p>
