--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -16,6 +16,17 @@
     </div>
 
     <div class= "categoriesHome">
+      <img onmouseover="backgroundImg(this)" onmouseout="normalImg(this)" border="0" src="photo3.jpg" alt="photography" width:"100vw" height="100vh">
+      <script>
+      function backgroundImg(x){
+        x.style.height = "100vh";
+        x.style.width = "100vw";
+      }
+      function normalImg(x){
+        x.style.height = "32px";
+        x.style.width = "32px";
+      }
+      </script>
       <!-- <div id="picture"></div>
       <ul>
         <a href="photography.html">
