--- a/portfolio/photography.html
+++ b/portfolio/photography.html
@@ -18,7 +18,7 @@
       </div>
 
       <div class="content">
-    <div class="contentImagePlacement">
+    <!-- <div class="contentImagePlacement">
       <img src="photography2.jpg">
       </div>
     <div class="contentImagePlacement">
@@ -44,17 +44,213 @@
       </div>
     <div class="contentImagePlacement">
       <img src="photography9.jpg">
-      </div>
-      </div>
+      </div> -->
 
+      <img id="biggerImg" src="photo1.jpg" alt="photo" style="width:80%; max-width: 400px">
+        <div id="myModal" class="modal">
+        <span class="close">&times;</span>
+        <img class="modal-content" id="img101">
+        <div id="caption"></div>
+        </div>
+        <script>
+        var modal = document.getElementById("myModal");
+        var img = document.getElementById("biggerImg");
+        var modalImg = document.getElementById("img101");
+        var captionText = document.getElementById("photo");
+        img.onclick = function(){
+          modal.style.display = "block";
+          modalImg.src = this.src;
+          captionText.innerHTML = this.alt;
+        }
+        var span = document.getElementsByClassName("close")[0];
+        span.onclick = function() {
+          modal.style.display = "none";
+        }
+      </script>
 
-    <div class="next">
-      <a href="illustrations.html">
-        <p>next: illustrations</p>
-        </a>
-    </div>
+    <img id="biggerImg2" src="photo2.jpg" alt="photo" style="width:80%; max-width: 400px">
+      <div id="myModal" class="modal">
+      <span class="close">&times;</span>
+      <img class="modal-content" id="img101">
+      <div id="caption"></div>
+      </div>
+      <script>
+      var modal = document.getElementById("myModal");
+      var img = document.getElementById("biggerImg2");
+      var modalImg = document.getElementById("img101");
+      var captionText = document.getElementById("photo");
+      img.onclick = function(){
+        modal.style.display = "block";
+        modalImg.src = this.src;
+        captionText.innerHTML = this.alt;
+      }
+      var span = document.getElementsByClassName("close")[0];
+      span.onclick = function() {
+        modal.style.display = "none";
+      }
+    </script>
+
+      <img id="biggerImg3" src="photo3.jpg" alt="photo" style="width:80%; max-width: 400px">
+      <div id="myModal" class="modal">
+      <span class="close">&times;</span>
+      <img class="modal-content" id="img101">
+      <div id="caption"></div>
+      </div>
+      <script>
+      var modal = document.getElementById("myModal");
+      var img = document.getElementById("biggerImg3");
+      var modalImg = document.getElementById("img101");
+      var captionText = document.getElementById("photo");
+      img.onclick = function(){
+        modal.style.display = "block";
+        modalImg.src = this.src;
+        captionText.innerHTML = this.alt;
+      }
+      var span = document.getElementsByClassName("close")[0];
+      span.onclick = function() {
+        modal.style.display = "none";
+      }
+    </script>
+
+      <img id="biggerImg4" src="photo4.jpg" alt="photo" style="width:80%; max-width: 400px">
+      <div id="myModal" class="modal">
+      <span class="close">&times;</span>
+      <img class="modal-content" id="img101">
+      <div id="caption"></div>
+      </div>
+      <script>
+      var modal = document.getElementById("myModal");
+      var img = document.getElementById("biggerImg4");
+      var modalImg = document.getElementById("img101");
+      var captionText = document.getElementById("photo");
+      img.onclick = function(){
+        modal.style.display = "block";
+        modalImg.src = this.src;
+        captionText.innerHTML = this.alt;
+      }
+      var span = document.getElementsByClassName("close")[0];
+      span.onclick = function() {
+        modal.style.display = "none";
+      }
+    </script>
+
+      <img id="biggerImg5" src="photo6.jpg" alt="photo" style="width:80%; max-width: 400px">
+      <div id="myModal" class="modal">
+      <span class="close">&times;</span>
+      <img class="modal-content" id="img101">
+      <div id="caption"></div>
+      </div>
+      <script>
+      var modal = document.getElementById("myModal");
+      var img = document.getElementById("biggerImg5");
+      var modalImg = document.getElementById("img101");
+      var captionText = document.getElementById("photo");
+      img.onclick = function(){
+        modal.style.display = "block";
+        modalImg.src = this.src;
+        captionText.innerHTML = this.alt;
+      }
+      var span = document.getElementsByClassName("close")[0];
+      span.onclick = function() {
+        modal.style.display = "none";
+      }
+    </script>
+
+      <img id="biggerImg6" src="photo9.jpg" alt="photo" style="width:80%; max-width: 400px">
+      <div id="myModal" class="modal">
+      <span class="close">&times;</span>
+      <img class="modal-content" id="img101">
+      <div id="caption"></div>
+      </div>
+      <script>
+      var modal = document.getElementById("myModal");
+      var img = document.getElementById("biggerImg6");
+      var modalImg = document.getElementById("img101");
+      var captionText = document.getElementById("photo");
+      img.onclick = function(){
+        modal.style.display = "block";
+        modalImg.src = this.src;
+        captionText.innerHTML = this.alt;
+      }
+      var span = document.getElementsByClassName("close")[0];
+      span.onclick = function() {
+        modal.style.display = "none";
+      }
+    </script>
+
+      <img id="biggerImg7" src="photo8.jpg" alt="photo" style="width:80%; max-width: 400px">
+      <div id="myModal" class="modal">
+      <span class="close">&times;</span>
+      <img class="modal-content" id="img101">
+      <div id="caption"></div>
+      </div>
+      <script>
+      var modal = document.getElementById("myModal");
+      var img = document.getElementById("biggerImg7");
+      var modalImg = document.getElementById("img101");
+      var captionText = document.getElementById("photo");
+      img.onclick = function(){
+        modal.style.display = "block";
+        modalImg.src = this.src;
+        captionText.innerHTML = this.alt;
+      }
+      var span = document.getElementsByClassName("close")[0];
+      span.onclick = function() {
+        modal.style.display = "none";
+      }
+    </script>
+
+      <img id="biggerImg8" src="photo5.jpg" alt="photo" style="width:80%; max-width: 400px">
+      <div id="myModal" class="modal">
+      <span class="close">&times;</span>
+      <img class="modal-content" id="img101">
+      <div id="caption"></div>
+      </div>
+      <script>
+      var modal = document.getElementById("myModal");
+      var img = document.getElementById("biggerImg8");
+      var modalImg = document.getElementById("img101");
+      var captionText = document.getElementById("photo");
+      img.onclick = function(){
+        modal.style.display = "block";
+        modalImg.src = this.src;
+        captionText.innerHTML = this.alt;
+      }
+      var span = document.getElementsByClassName("close")[0];
+      span.onclick = function() {
+        modal.style.display = "none";
+      }
+    </script>
+
+      <img id="biggerImg9" src="photo7.jpg" alt="photo" style="width:80%; max-width: 400px">
+      <div id="myModal" class="modal">
+      <span class="close">&times;</span>
+      <img class="modal-content" id="img101">
+      <div id="caption"></div>
+      </div>
+      <script>
+      var modal = document.getElementById("myModal");
+      var img = document.getElementById("biggerImg9");
+      var modalImg = document.getElementById("img101");
+      var captionText = document.getElementById("photo");
+      img.onclick = function(){
+        modal.style.display = "block";
+        modalImg.src = this.src;
+        captionText.innerHTML = this.alt;
+      }
+      var span = document.getElementsByClassName("close")[0];
+      span.onclick = function() {
+        modal.style.display = "none";
+      }
+    </script>
+  </div>
 
     <div class="contactMeHomepage">
+      <div class="next">
+        <a href="illustrations.html">
+          <p>next: illustrations</p>
+          </a>
+      </div>
       <div class= "titleName">
         <a href="index.html">
         <p>daisy bell</p>
