--- a/portfolio/videoWork.html
+++ b/portfolio/videoWork.html
@@ -32,14 +32,17 @@
     </div>
     </div>
 
-    <div class="next">
-      <a href="paintings.html">
-        <p>next: paintings</p>
-        </a>
-    </div>
-
     <div class="contactMeHomepage">
-        <p>contact me</p>
+      <div class="next">
+        <a href="paintings.html">
+          <p>next: paintings</p>
+          </a>
+      </div>
+      <div class= "titleName">
+        <a href="index.html">
+        <p>daisy bell</p>
+        </a>
+      </div>
     </div>
 
   </body>
