--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -16,7 +16,7 @@
     </div>
 
     <div class= "categoriesHome">
-      <img onmouseover="backgroundImg(this)" onmouseout="normalImg(this)" border="0" src="photo3.jpg" alt="photography" width:"100vw" height="100vh">
+      <!-- <img onmouseover="backgroundImg(this)" onmouseout="normalImg(this)" border="0" src="photo3.jpg" alt="photography" width:"100vw" height="100vh">
       <script>
       function backgroundImg(x){
         x.style.height = "100vh";
@@ -26,22 +26,8 @@
         x.style.height = "32px";
         x.style.width = "32px";
       }
-      </script>
-      <!-- <div id="picture"></div>
-      <ul>
-        <a href="photography.html">
-        <li rel="one"><a href="#" data-text='Home'><img src="photographyButton.png"></a> </li>
-        </a>
-        <a href="illustrations.html">
-        <li rel="two"><a href="#" data-text='Home'><img src="illustrationsButton.png"></a> </li>
-        </a>
-        <a href="videoWork.html">
-        <li rel="three"><a href="#" data-text='Home'><img src="videoWorkButton.png"></a> </li>
-        </a>
-        <a href="paintings.html">
-        <li rel="four"><a href="#" data-text='Home'><img src="paintingsButton.png"></a> </li>
-        </a>
-      </ul> -->
+      </script> -->
+    
       <div class="backgroundImage1">
       <a href="photography.html">
       <img src="photographyButton.png" alt="photography"><br>
