--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -9,10 +9,10 @@
   <body>
 
     <div class="homepage">
-    <div class= "titleName">
-      <!-- <a href="index.html"> -->
-      <p>daisy<br>bell</p>
-      <!-- </a> -->
+      <div class="background">
+        <a href="index.html">
+      <img src="titleSlide1.png">
+    </a>
     </div>
 
     <div class= "categoriesHome">
@@ -27,7 +27,7 @@
         x.style.width = "32px";
       }
       </script> -->
-    
+
       <div class="backgroundImage1">
       <a href="photography.html">
       <img src="photographyButton.png" alt="photography"><br>
