next applied to modals and modals simplified in photography page

--- a/portfolio/photography.html
+++ b/portfolio/photography.html
@@ -46,13 +46,13 @@
       <img src="photography9.jpg">
       </div> -->
 
-      <img id="biggerImg" src="photo1.jpg" alt="photo" style="width:80%; max-width: 400px">
-        <div id="myModal" class="modal">
-        <span class="close">&times;</span>
-        <img class="modal-content" id="img101">
-        <div id="caption"></div>
-        </div>
-        <script>
+      <img id="biggerImg" class="modalImg" src="photo1.jpg" alt="photo" style="width:80%; max-width: 400px">
+        <!-- <div id="myModal" class="modal">
+        <span class="close">&times;</span> -->
+        <!-- <img class="modal-content" id="img101"> -->
+        <!-- <div id="caption"></div>
+        </div> -->
+        <!-- <script>
         var modal = document.getElementById("myModal");
         var img = document.getElementById("biggerImg");
         var modalImg = document.getElementById("img101");
@@ -66,15 +66,15 @@
         span.onclick = function() {
           modal.style.display = "none";
         }
-      </script>
+      </script> -->
 
-    <img id="biggerImg2" src="photo2.jpg" alt="photo" style="width:80%; max-width: 400px">
-      <div id="myModal" class="modal">
-      <span class="close">&times;</span>
-      <img class="modal-content" id="img101">
-      <div id="caption"></div>
-      </div>
-      <script>
+    <img id="biggerImg2" class="modalImg" src="photo2.jpg" alt="photo" style="width:80%; max-width: 400px">
+      <!-- <div id="myModal" class="modal">
+      <span class="close">&times;</span> -->
+      <!-- <img class="modal-content" id="img101"> -->
+      <!-- <div id="caption"></div>
+      </div> -->
+      <!-- <script>
       var modal = document.getElementById("myModal");
       var img = document.getElementById("biggerImg2");
       var modalImg = document.getElementById("img101");
@@ -88,15 +88,15 @@
       span.onclick = function() {
         modal.style.display = "none";
       }
-    </script>
+    </script> -->
 
-      <img id="biggerImg3" src="photo3.jpg" alt="photo" style="width:80%; max-width: 400px">
-      <div id="myModal" class="modal">
-      <span class="close">&times;</span>
-      <img class="modal-content" id="img101">
-      <div id="caption"></div>
-      </div>
-      <script>
+      <img id="biggerImg3" class="modalImg" src="photo3.jpg" alt="photo" style="width:80%; max-width: 400px">
+      <!-- <div id="myModal" class="modal">
+      <span class="close">&times;</span> -->
+      <!-- <img class="modal-content" id="img101"> -->
+      <!-- <div id="caption"></div>
+      </div> -->
+      <!-- <script>
       var modal = document.getElementById("myModal");
       var img = document.getElementById("biggerImg3");
       var modalImg = document.getElementById("img101");
@@ -110,15 +110,15 @@
       span.onclick = function() {
         modal.style.display = "none";
       }
-    </script>
+    </script> -->
 
-      <img id="biggerImg4" src="photo4.jpg" alt="photo" style="width:80%; max-width: 400px">
-      <div id="myModal" class="modal">
-      <span class="close">&times;</span>
-      <img class="modal-content" id="img101">
-      <div id="caption"></div>
-      </div>
-      <script>
+      <img id="biggerImg4" class="modalImg" src="photo4.jpg" alt="photo" style="width:80%; max-width: 400px">
+      <!-- <div id="myModal" class="modal">
+      <span class="close">&times;</span> -->
+      <!-- <img class="modal-content" id="img101"> -->
+      <!-- <div id="caption"></div>
+      </div> -->
+      <!-- <script>
       var modal = document.getElementById("myModal");
       var img = document.getElementById("biggerImg4");
       var modalImg = document.getElementById("img101");
@@ -132,15 +132,15 @@
       span.onclick = function() {
         modal.style.display = "none";
       }
-    </script>
+    </script> -->
 
-      <img id="biggerImg5" src="photo6.jpg" alt="photo" style="width:80%; max-width: 400px">
-      <div id="myModal" class="modal">
-      <span class="close">&times;</span>
-      <img class="modal-content" id="img101">
-      <div id="caption"></div>
-      </div>
-      <script>
+      <img id="biggerImg5" class="modalImg" src="photo6.jpg" alt="photo" style="width:80%; max-width: 400px">
+      <!-- <div id="myModal" class="modal">
+      <span class="close">&times;</span> -->
+      <!-- <img class="modal-content" id="img101"> -->
+      <!-- <div id="caption"></div>
+      </div> -->
+      <!-- <script>
       var modal = document.getElementById("myModal");
       var img = document.getElementById("biggerImg5");
       var modalImg = document.getElementById("img101");
@@ -154,15 +154,15 @@
       span.onclick = function() {
         modal.style.display = "none";
       }
-    </script>
+    </script> -->
 
-      <img id="biggerImg6" src="photo9.jpg" alt="photo" style="width:80%; max-width: 400px">
-      <div id="myModal" class="modal">
-      <span class="close">&times;</span>
-      <img class="modal-content" id="img101">
-      <div id="caption"></div>
-      </div>
-      <script>
+      <img id="biggerImg6" class="modalImg" src="photo9.jpg" alt="photo" style="width:80%; max-width: 400px">
+      <!-- <div id="myModal" class="modal">
+      <span class="close">&times;</span> -->
+      <!-- <img class="modal-content" id="img101"> -->
+      <!-- <div id="caption"></div>
+      </div> -->
+      <!-- <script>
       var modal = document.getElementById("myModal");
       var img = document.getElementById("biggerImg6");
       var modalImg = document.getElementById("img101");
@@ -176,15 +176,15 @@
       span.onclick = function() {
         modal.style.display = "none";
       }
-    </script>
+    </script> -->
 
-      <img id="biggerImg7" src="photo8.jpg" alt="photo" style="width:80%; max-width: 400px">
-      <div id="myModal" class="modal">
-      <span class="close">&times;</span>
-      <img class="modal-content" id="img101">
-      <div id="caption"></div>
-      </div>
-      <script>
+      <img id="biggerImg7" class="modalImg" src="photo8.jpg" alt="photo" style="width:80%; max-width: 400px">
+      <!-- <div id="myModal" class="modal">
+      <span class="close">&times;</span> -->
+      <!-- <img class="modal-content" id="img101"> -->
+      <!-- <div id="caption"></div>
+      </div> -->
+      <!-- <script>
       var modal = document.getElementById("myModal");
       var img = document.getElementById("biggerImg7");
       var modalImg = document.getElementById("img101");
@@ -198,15 +198,15 @@
       span.onclick = function() {
         modal.style.display = "none";
       }
-    </script>
+    </script> -->
 
-      <img id="biggerImg8" src="photo5.jpg" alt="photo" style="width:80%; max-width: 400px">
-      <div id="myModal" class="modal">
-      <span class="close">&times;</span>
-      <img class="modal-content" id="img101">
-      <div id="caption"></div>
-      </div>
-      <script>
+      <img id="biggerImg8" class="modalImg" src="photo5.jpg" alt="photo" style="width:80%; max-width: 400px">
+      <!-- <div id="myModal" class="modal">
+      <span class="close">&times;</span> -->
+      <!-- <img class="modal-content" id="img101"> -->
+      <!-- <div id="caption"></div>
+      </div> -->
+      <!-- <script>
       var modal = document.getElementById("myModal");
       var img = document.getElementById("biggerImg8");
       var modalImg = document.getElementById("img101");
@@ -220,23 +220,42 @@
       span.onclick = function() {
         modal.style.display = "none";
       }
-    </script>
+    </script> -->
 
-      <img id="biggerImg9" src="photo7.jpg" alt="photo" style="width:80%; max-width: 400px">
+      <img id="biggerImg9" class="modalImg" src="photo7.jpg" alt="photo" style="width:80%; max-width: 400px">
       <div id="myModal" class="modal">
-      <span class="close">&times;</span>
-      <img class="modal-content" id="img101">
+        <span class="close">&times;</span>
+        <span class="next">next</span>
+        <img class="modal-content" id="img101">
       <div id="caption"></div>
       </div>
       <script>
       var modal = document.getElementById("myModal");
-      var img = document.getElementById("biggerImg9");
+      var imgs = document.getElementsByClassName('modalImg');
       var modalImg = document.getElementById("img101");
       var captionText = document.getElementById("photo");
-      img.onclick = function(){
+      var index = 0;
+
+      for(var i = 0; i < imgs.length; i++){
+        var thisIndex = i;
+        imgs[i].index = thisIndex;
+        imgs[i].onclick = function(){
+          modal.style.display = "block";
+          modalImg.src = this.src;
+          // captionText.innerHTML = this.alt;
+          index = this.index;
+        }
+
+      }
+      var next = document.getElementsByClassName("next")[0];
+      next.onclick = function () {
+        index++;
+        index%=imgs.length;
         modal.style.display = "block";
-        modalImg.src = this.src;
-        captionText.innerHTML = this.alt;
+        modalImg.src = imgs[index].src;
+        // captionText.innerHTML = this.alt;
+        index = imgs[index].index;
+
       }
       var span = document.getElementsByClassName("close")[0];
       span.onclick = function() {
